shmuel 2025-05-27 23:16:21+03:00 - build 880

1. LuaFAR (far.Menu): refactoring.

shmuel 2025-05-27 13:23:29+03:00 - build 879

1. LuaFAR (far.Menu): allow each menu item to be specified
   as either a string or a table (was: table only).

shmuel 2025-05-16 21:19:24+03:00 - build 878

1. Revert the last commit.

shmuel 2025-05-15 17:09:35+03:00 - build 877

1. LuaFAR: refactoring.

shmuel 2025-05-10 21:28:45+03:00 - build 876

1. LuaFAR: add FMENU_WRAPMODE to far.Show.

shmuel 2025-05-07 21:44:43+03:00 - build 875

1. LuaFAR: make utf8.format() handle integers beyond 32 bit size.

johnd0e 2025-04-30 23:54:19+02:00 - build 874

1. LuaFAR: fix FarColor / UnderlineColor handling.

shmuel 2025-04-17 10:44:36+03:00 - build 873

1. LuaFAR: support named groups in regex functions.

shmuel 2025-04-11 14:09:36+03:00 - build 872

1. LuaFAR: add functions and methods regex.tfind, regex.tfindW.

shmuel 2025-04-11 12:17:20+03:00 - build 871

1. LuaFAR: eliminate some compiler warnings.

shmuel 2025-03-21 12:38:18+02:00 - build 870

1. Add lf_ prefix to LuaFAR source files' names.

shmuel 2025-03-18 23:57:24+02:00 - build 869

1. LuaFAR: fix crash in recursively called GetOpenPanelInfoW due to hPanel==nullptr.

shmuel 2025-02-28 16:21:34+02:00 - build 868

1. Revert build 846.

shmuel 2025-01-31 19:49:10+02:00 - build 867

1. Revert builds 861-864 since the current far.Timer behavior is questionable.

shmuel 2025-01-29 20:14:04+02:00 - build 866

1. LuaFAR (generic plugin): "%FARPROFILE%\luafar_init.lua" is run by default.
   That can be prevented by defining a compilation flag -DNO_RUN_LUAFAR_INIT.

2. Plugin LuaMacro is built with this flag not defined.


MZK 2025-01-25 20:59:20-05:00 - build 865

1. gh-802: Macro API to report VMenu alignment state: Menu.HorizontalAlignment.

shmuel 2025-01-23 00:39:05+02:00 - build 864

1. LuaFAR: a temporary workaround in processing timer events.

shmuel 2025-01-22 20:36:47+02:00 - build 863
