@@ -1,3 +1,11 @@
+johnd0e 2025-06-08 21:28:12+02:00 - build 881
+
+1. Enhance message on moonscript macrofile loading to include error source filename.
+
+2. Enhance detecting macro loading error source.
+
+3. Fix edit position on moonscript parsing error.
+
 shmuel 2025-05-27 23:16:21+03:00 - build 880
 
 1. LuaFAR (far.Menu): refactoring.
